--- a/hackathonvolunteer-certificates-305-fall2025-copy.html
+++ b/hackathonvolunteer-certificates-305-fall2025-copy.html
@@ -139,12 +139,13 @@
   <nav class="navbar">
     <div class="nav-container">
       <div class="nav-brand">
-        <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener"><strong>Code Crunch</strong></a>
+        <a href="https://HackUniversity.vercel.app" target="_blank" rel="noopener"><strong>Hack University Initiative</strong></a>
       </div>
       <div class="nav-links">
+        <a href="https://codecrunchglobal.vercel.app" class="nav-link">Code Crunch Worldwide</a>
+        <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
         <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
         <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
-        <a href="https://gdgatfiu.vercel.app/" class="nav-link">GDG at FIU</a>
         <a href="https://raspberrypicrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
         <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
       </div>
@@ -167,8 +168,21 @@
   <main class="container">
     <!-- CERTIFICATE GENERATOR -->
     <section class="surface" id="certificate-generator">
+
+<!-- #
+#
+# replace below the hack name 
+#
+#
+#
+#
+#
+# -->
+
+
+
       <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • 305 Hackathon Edition (Fall 2025)</h2>
-      <p class="card-description" style="text-align:center">[ OFFICIAL PARTICIPATION CERTIFICATE ] — Download your volunteer certificate using your email address</p>
+      <p class="card-description" style="text-align:center">[ OFFICIAL CERTIFICATE ] — Download your volunteer certificate using your registeredemail address</p>
 
       <label for="certificateEmailInput" class="sr-only">Registered email address</label>
       <div class="cg-row">
@@ -187,16 +201,16 @@
         <div>
           <h3>Hack University</h3>
           <p>A collaborative effort uniting student organizations and global communities to empower innovators, developers, and leaders.</p>
-          <p><a href="#">HackUniversity.vercel.app</a></p>
+          <p><a href="https://hackuniversity.vercel.app">HackUniversity.vercel.app</a></p>
           <div>
             <h4 style="font-size:14px;font-weight:500;margin-bottom:12px;">Connect With Us:</h4>
             <div class="social-grid">
-              <a href="#" class="social-link"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
-              <a href="#" class="social-link"><i class="fab fa-instagram"></i><span>Instagram</span></a>
-              <a href="#" class="social-link"><i class="fab fa-github"></i><span>GitHub</span></a>
-              <a href="#" class="social-link"><i class="fab fa-youtube"></i><span>YouTube</span></a>
-              <a href="#" class="social-link"><i class="fab fa-discord"></i><span>Discord</span></a>
-              <a href="#" class="social-link"><i class="far fa-calendar-alt"></i><span>Calendar</span></a>
+              <a href="https://hackuniversity-linkedin.vercel.app" class="social-link"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a>
+              <a href="https://www.instagram.com/codecrunchclub/" class="social-link"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+              <a href="https://github.com/CODE-CRUNCH-CLUB" class="social-link"><i class="fab fa-github"></i><span>GitHub</span></a>
+              <a href="https://www.youtube.com/@CODECRUNCH-WORLDWIDE" class="social-link"><i class="fab fa-youtube"></i><span>YouTube</span></a>
+              <a href="https://hackuniversity-registration.vercel.app" class="social-link"><i class="fab fa-discord"></i><span>Discord</span></a>
+              <a href="https://hackuniversity-calendar.vercel.app" class="social-link"><i class="far fa-calendar-alt"></i><span>Calendar</span></a>
             </div>
           </div>
         </div>
@@ -223,6 +237,17 @@
   </footer>
 
   <script>
+
+// <!-- #
+// #
+// # replace below API URL 
+// #
+// #
+// #
+// #
+// #
+// # -->
+
     // ===== Settings =====
     const CERT_API_URL = 'https://script.google.com/macros/s/AKfycbzzc8k3xWTxdyc7jfVpLISnSpY1qwaNB_QMmYC0ORkM9UVUbKk4De5cb5upCztCepN9/exec';
     const DEFAULT_LOGOS = [
